[package]
name = "tauvslagrange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { version = "0.2.0", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8.0"
rand = "0.8.5"
rustyline = "12"
